<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>abb_crb15000_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB GoFa CRB 15000 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB GoFa CRB 15000 manipulators. This currently includes the
      CRB 15000-5/0.95 variant only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <em>ABB CRB 15000 Datasheet</em>, document ID: <em>TODO, Feb 2021</em>.
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Note 1: this is an early conversion from CAD data downloaded from ABB's
      library with geometry and kinematics partially based on the GoFa
      datasheet.
      There may be conversion errors and other deviations from the real robot.
    </p>
    <p>
      Note 2: this support package does not currently include launch files for
      loading a driver, as no driver has been tested with OmniCore controllers
      and/or CRB 15000 robots yet.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/abb_crb15000_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>abb</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>crb15000</tag>
        <tag>gofa</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
