<?xml version="1.0"?>
<package format="2">
  <name>abb_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for ABB manipulators within ROS-Industrial.</description>
  <author>Shaun Edwards</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/abb_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb1200_5_90_moveit_config</exec_depend>
  <exec_depend>abb_irb1200_7_70_moveit_config</exec_depend>
  <exec_depend>abb_irb1200_support</exec_depend>
  <exec_depend>abb_irb120_gazebo</exec_depend>
  <exec_depend>abb_irb120_moveit_config</exec_depend>
  <exec_depend>abb_irb120_support</exec_depend>
  <exec_depend>abb_irb120t_moveit_config</exec_depend>
  <exec_depend>abb_irb1600_6_12_moveit_config</exec_depend>
  <exec_depend>abb_irb1600_support</exec_depend>
  <exec_depend>abb_irb2600_support</exec_depend>
  <exec_depend>abb_irb4600_support</exec_depend>
  <exec_depend>abb_irb52_support</exec_depend>
  <exec_depend>abb_irb6650s_support</exec_depend>
  <exec_depend>abb_irb6700_support</exec_depend>
  <exec_depend>abb_irb7600_support</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
