<?xml version="1.0"?>
<package format="2">
  <name>abb_irb1200_gazebo</name>
  <version>0.0.1</version>
  <description>
    <p>
      Gazebo support for the ABB IRB 1200
    </p>
    <p>
      This package contains configuration and launch files
      to simulate the ABB IRB 1200-5/90 with Gazebo.
    </p>
  </description>

  <author email="stephan@ironox.com">Stephan Wirth</author>
  <maintainer email="lucas@ironox.com">Lucas Chiesa</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb1200_support</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

</package>
