<?xml version="1.0"?>
<package format="2">
  <name>abb_irb1200_gazebo</name>
  <version>0.0.1</version>
  <description>
    <p>
      Gazebo support for the ABB IRB 1200
    </p>
    <p>
      This package currently only contains configuration and launch files to
      simulate the 5/0.9 variant of the ABB IRB 1200 robot.
    </p>
    <p>
      Ros control <em>effort_controllers</em> are used to move the robot joints.
      The controller params (PID, constrains) are guesstimates, and were
      obtained testing different values until the joint movement was good enough
      for the intended application. You may need to change them for your simulation.
    </p>
  </description>

  <author email="stephan@ironox.com">Stephan Wirth</author>
  <maintainer email="lucas@ironox.com">Lucas Chiesa</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_irb1200_support</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

</package>
