<package>
  <name>abb_irb120_gazebo</name>
  <version>0.0.1</version>
  <description>
    <p>
      ROS-Industrial Gazebo support package for the ABB IRB 120 (and variants).
    </p>
    <p>
      This package contains the configuration data and launch files required
      to simulate the ABB IRB 120 manipulator in Gazebo. This includes the base
      model and the 120T.
    </p>
    <p>
      Before using any of the configuration files included in this package, be
      sure to check they are correct for the particular robot model and
      configuration you intend to use them with.
    </p>
  </description>
  <author email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</author>
  <author>Kevin Kelly (Trinity College Dublin)</author>
  <maintainer email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>abb_irb120_support</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_controllers</run_depend>
</package>
