<package>
  <name>abb_irb120_support</name>
  <version>0.2.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 120 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 120 manipulators. This includes the base model (120) and the 120T.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the 
      <a href="http://new.abb.com/products/robotics/industrial-robots/irb-120/irb-120-data">ABB 
      IRB 120 technical data sheet</a> (Version: ROB0149EN_D, May 2012). All URDFs / XACROs are 
      based on the default motion and joint velocity limits, unless noted otherwise (ie: no 
      support for high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</author>
  <maintainer email="culletom@tcd.ie">Mark Culleton (Trinity College Dublin)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>abb_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
</package>
