<?xml version="1.0"?>
<package format="2">
  <name>abb_irb2600_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 2600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 2600 manipulators. This currently includes the IRB 2600-12/1.65
      (20/1.65). Variants listed in parenthesis may use the files of the
      preceding model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="http://new.abb.com/products/robotics/industrial-robots/irb-2600/irb-2600-data">
      ABB IRB 2600 technical data sheet</a> (Version: ROB0142EN_B, October
      2010). All urdfs / xacros are based on the default motion and joint
      velocity limits, unless noted otherwise (ie: no support for high speed
      joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="cody.bressler@swri.org">Cody Bressler (SwRI)</author>
  <author email="jonathan.meyer@swri.org">Jonathan Meyer (SwRI)</author>
  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer (SwRI)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb2600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
