<?xml version="1.0" ?>
<package format="2">
  <name>abb_irb4600_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 4600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 4600 manipulators. This currently includes the 60/2.05 variant
      only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="https://library.e.abb.com/public/eadd388d8bec4b75a3342026c1631b5e/IRB%204600%20ROB0109EN_H.pdf">ABB IRB 4600
      technical data sheet</a>. All urdfs /
      xacros are based on the default motion and joint velocity limits, unless
      noted otherwise (ie: no support for high speed joints, extended / limited
      motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Jonathan Meyer (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb4600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
