<?xml version="1.0" ?>
<package>
  <name>abb_irb7600_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 7600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 7600 manipulators. This currently includes the 150/3.50
      variant only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <a href="https://library.e.abb.com/public/10b88af5de1b4396a3337e734869f364/PR10074_EN_R11_HR.pdf">
      ABB IRB 7600 product specification document</a>. All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="michael.riperger@swri.org">Michael Ripperger</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/abb_irb7600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>abb_driver</run_depend>
  <run_depend>abb_resources</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
